# platzi-machine-learning

./: .gitignore  README.md  environment.yml  pyproject.toml
data/processed/: partidos_cebollitas_ohe.csv
notebooks/: 01_jss_preparation.ipynb  02_jss_eda.ipynb  03_jss_scale.ipynb  04_jss_feature_engineering.ipynb  05_jss_feature_selection.ipynb  06_jss_data_split.ipynb  07_jss_linear_regression.ipynb  08_jss_evaluation.ipynb  09_jss_random_forest.ipynb  10_jss_clustering_kmeans.ipynb  11_jss_pca.ipynb  12_jss_pipeline.ipynb
references/: 11_Bonus.ipynb
