[project]
name = "platz-machine-learning"
version = "0.1.0"
description = "Fundamentos de Machine Learning"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "pathlib",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
